    Note, while TinyPedal is running, changing screen DPI scaling may still break main window dialog view, and requires restarting TinyPedal to scale correctly according to new DPI scaling setting.
    Alternatively, enable the new "enable_high_dpi_scaling" option to allow auto-scaling window dialog while TinyPedal is running.

* Misc
  - Disabled "window-focus" at all time on all overlay widgets.
  - Heatmap Editor now shows temperature entries in table view, and supports multi-selection for offsetting and removing temperature, and up to one decimal place is kept.
  - Show "Preset Locked" notification on main window if currently loaded preset is locked.
  - Add new command line arguments "-p, --pyside" for choosing PySide (Qt for Python) module version.
    Currently, this option is only available while "running from source", and mainly for testing purpose or used on platform where PySide2 is no longer available.
  - Fixed a visual problem where fuel level bar indicator does not update remaining level if fuel delta data was not yet recorded for current track.

2.26.0 (2025-04-02)
-----------------------------
* Radar Widget
  - Add "show_overlap_indicator_in_cone_style" option (optional), which shows overlap indicator in "cone style" instead of "boundary style".
  - Add "overlap_cone_angle" option, which sets cone display angle in degrees. This option does not affect overlap detection range.
  - Renamed "overlap_detection_range_multiplier" option to "overlap_nearby_range_multiplier", which sets nearby vehicle overlap detection range multiplier.
    A value of "5" would result a 5-vehicle-wide detection range. Default is "5" vehicle-wide.
  - Add "overlap_critical_range_multiplier" option, which sets nearby vehicle critical overlap detection range multiplier. Default is "1" vehicle-wide.
  - Add "show_angle_mark" and angle mark style options, which show angle mark (fixed 45 degrees) on radar background.