@@ -12,6 +12,11 @@ WIP
     Note, while TinyPedal is running, changing screen DPI scaling may still break main window dialog view, and requires restarting TinyPedal to scale correctly according to new DPI scaling setting.
     Alternatively, enable the new "enable_high_dpi_scaling" option to allow auto-scaling window dialog while TinyPedal is running.
 
+* Linux
+  - Add "enable_x11_display_server_override" option in "Compatibility", which sets display server type to "X11" via environment variable on Linux.
+  - Add "enable_x11_platform_plugin_override" option in "Compatibility", which sets Qt platform plugin type to "X11" via environment variable on Linux.
+  - See User Guide "Compatibility" section for explanation of these two options.
+
 * Misc
   - Disabled "window-focus" at all time on all overlay widgets.
   - Heatmap Editor now shows temperature entries in table view, and supports multi-selection for offsetting and removing temperature, and up to one decimal place is kept.
